<resources>
    <string name="app_name">Clockker</string>
    <string name="TextBtnRight"><![CDATA[>]]></string>
    <string name="TextBtnLeft"><![CDATA[<]]></string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Логин пользователя</string>
    <string name="nav_header_subtitle">Почта пользователя</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_home">Новости</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_time_manager">Планировщик</string>
    <string name="menu_plan">Цели</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="h_in_registration">Зарегистрироваться</string>
    <string name="h_registration">Регистрация</string>
    <string name="h_input">Войти</string>
    <string name="h_restore_password">Восстановить пароль</string>
    <string name="h_password">Пароль</string>
    <string name="h_login_or_phone">Логин или номер телефона</string>
    <string name="h_authorization">Авторизация</string>
    <string name="error_input_data">в заполнении данных</string>
    <string name="error">Ошибка</string>
    <string name="menu_out">Выйти</string>
    <string name="menu_timer">Таймер</string>
    <string name="h_help">Помощь</string>
    <string name="title_activity_creater_manager">ScrollingActivity</string>

    <string name="calc_tv_header">Калькулятор чаевых</string>
    <string name="calc_tv1">Сумма заказа</string>
    <string name="calc_tv2">Кол-во людей</string>
    <string name="calc_tv3">Чаевые</string>
    <string name="calc_rbText1">5%</string>
    <string name="calc_rbText2">10%</string>
    <string name="calc_rbText3">15%</string>
    <string name="calc_rbText4">Другое:</string>
    <string name="calc_btn1">Сбросить</string>
    <string name="calc_btn2">Вычислить</string>
    <string name="calc_tv4">Сумма чаевых:</string>
    <string name="calc_tv6">Сумма к оплате:</string>
    <string name="calc_tv8">Итог на человека:</string>

</resources>