<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayoutCalculate"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".CalculateActivity"
    android:stretchColumns="1"
    android:layout_margin="10dp">

    <TableRow>
        <TextView
            android:id="@+id/calc_tv_header"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="#000000"
            android:text="@string/calc_tv_header"/>
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/calc_tv1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:text="@string/calc_tv1"/>
        <EditText
            android:id="@+id/calc_et1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numeric="decimal"
            tools:text="decimal"
            android:layout_column="2"
            android:layout_span="2"/>
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/calc_tv2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:text="@string/calc_tv2"/>
        <EditText
            android:id="@+id/calc_et2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numeric="integer"
            tools:text="integer"
            android:layout_column="2"
            android:layout_span="2"/>
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/calc_tv3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:text="@string/calc_tv3"/>
    </TableRow>
    <TableRow>
        <RadioGroup
            android:id="@+id/calc_rbGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_column="0"
            android:layout_span="3"
            android:checkedButton="@+id/calc_rb1">
            <RadioButton
                android:id="@+id/calc_rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_rbText1"
                android:textSize="15sp"/>
            <RadioButton
                android:id="@+id/calc_rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_rbText2"
                android:textSize="15sp"/>
            <RadioButton
                android:id="@+id/calc_rb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_rbText3"
                android:textSize="15sp"/>
            <RadioButton
                android:id="@+id/calc_rb4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calc_rbText4"
                android:textSize="15sp"/>
        </RadioGroup>
        <EditText
            android:id="@+id/calc_et3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numeric="decimal"
            tools:text="decimal"/>
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/calc_btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:text="@string/calc_btn1"/>
        <Button
            android:id="@+id/calc_btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:text="@string/calc_btn2"/>
    </TableRow>

    <View
        android:layout_height="5dp"
        android:background="#DDFFDD"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TableRow
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/calc_tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/calc_tv4"/>
        <TextView
            android:id="@+id/calc_tv_out1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2"
            tools:text="text"/>
    </TableRow>

    <TableRow
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/calc_tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/calc_tv6"/>
        <TextView
            android:id="@+id/calc_tv_out2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2"
            tools:text="text"/>
    </TableRow>
    <TableRow
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/calc_tv8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/calc_tv8"/>
        <TextView
            android:id="@+id/calc_tv_out3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_span="2"
            tools:text="text"/>
    </TableRow>
</TableLayout>