<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.viperxs.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"
        />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.viperxs.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.viperxs.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_timer"
        android:name="com.example.viperxs.ui.timer.TimerFragment"
        android:label="@string/menu_timer"
        tools:layout="@layout/fragment_timer" />

    <!--<fragment
        android:id="@+id/nav_time_managment"
        android:name="com.example.viperxs.ui.timemanager.TimeManagment"
        android:label="Управление временем"
        tools:layout="@layout/time_managment_fragment" />-->


</navigation>