<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_help"
        android:orderInCategory="5"
        android:title="@string/h_help"
        app:showAsAction="never"
        android:onClick="onClickActionMenu"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="15"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:onClick="onClickActionMenu"/>

    <item android:id="@+id/action_regisr"
        android:orderInCategory="10"
        android:title="@string/h_registration"
        app:showAsAction="never"
        android:onClick="onClickActionMenu"
        />

    <item android:id="@+id/action_calculate"
        android:orderInCategory="20"
        android:title="Чаевые"
        app:showAsAction="never"
        android:onClick="onClickActionMenu"
        />

    <item android:id="@+id/action_develop"
        android:orderInCategory="2"
        android:title="Разработчик"
        app:showAsAction="never"
        android:onClick="onClickActionMenu"
        />
    <item android:id="@+id/action_product_calc"
        android:orderInCategory="25"
        android:title="Вкусняшки"
        app:showAsAction="never"
        android:onClick="onClickActionMenu"
        />
</menu>