<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="25dp"
    android:layout_marginTop="50dp"
    android:layout_marginEnd="25dp"
    android:orientation="vertical"
    tools:actionBarNavMode="list"
    tools:context=".RegistrActivity">


    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:gravity="center"
        android:text="@string/h_registration"
        android:textColor="#F44336"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/textName"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Никнейм (Логин)" />

    <EditText
        android:id="@+id/editName"
        style="@style/EditTextStyle.EditTextGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textEmail"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email" />

    <EditText
        android:id="@+id/editEmail"
        style="@style/EditTextStyle.EditTextGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textPhone"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Номер телефона" />

    <EditText
        android:id="@+id/editPhone"
        style="@style/EditTextStyle.EditTextGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/textPass1"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/h_password" />

    <EditText
        android:id="@+id/editPass1"
        style="@style/EditTextStyle.EditTextGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textPass2"
        style="@style/TextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Повторите пароль" />

    <EditText
        android:id="@+id/editPass2"
        style="@style/EditTextStyle.EditTextGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonRegistration"
        style="@style/ButtonStyle.ButtonRed"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:onClick="onClickRegistration"
        android:text="@string/h_in_registration" />

</LinearLayout>